# mock-sharepoint-legal-data-migration

./: README.md  pyproject.toml  run_demo.py
docs/: APPLICATION_ANSWERS.md  ARCHITECTURE.md  COPILOT_READINESS.md  MIGRATION_RUNBOOK.md  SHAREPOINT_MAPPING.md  TESTING_GUIDE.md
sql/: audit_summary.sql  reconciliation.sql
src/legal_migration/: __init__.py  database.py  discovery.py  generator.py  migrator.py  models.py  parser.py  pipeline.py  planner.py
tests/: test_migration.py
