[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-migration-demo"
version = "0.1.0"
description = "Zero-dependency legal document migration and metadata normalization demo"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
